// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component Should match a skin snapshot 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      neutral
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 2`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #E5EDFC;
  border: 1.5px solid #1250C4;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      blue
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 3`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #dcedc8;
  border: 1.5px solid #004D40;
  color: #004D40;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      success
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 4`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #ffefd6;
  border: 1.5px solid #f09100;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      warning
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 5`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      error
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot of a simple alert 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      Sample alert
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot with an icon 1`] = `
.ButtonBase-module__button___-CVUK {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.ButtonBase-module__button-default___K4Nmm {
  color: var(--qtm-colors-neutral-0);
}

.ButtonBase-module__button-default-primary___X9GaT {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.ButtonBase-module__button-icon___s3a-2 {
  pointer-events: none;
}

.ButtonBase-module__button-icon-medium___HY30Y,
.ButtonBase-module__button-icon-small___tdGMn,
.ButtonBase-module__button-icon-xsmall___Iilfe {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.ButtonBase-module__button-medium___BtByl,
.ButtonBase-module__button-small___ffdO7 {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.ButtonBase-module__button-medium___BtByl {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__shadow-2-neutral-500___mSG-z {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.ButtonBase-module__icon-button___nb2zK {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  outline: none;
}

.ButtonBase-module__icon-button___nb2zK,
.ButtonBase-module__icon-button___nb2zK:active,
.ButtonBase-module__icon-button___nb2zK:focus,
.ButtonBase-module__icon-button___nb2zK:hover {
  box-shadow: none;
}

.ButtonBase-module__icon-button-medium___-pGge {
  width: var(--qtm-spacing-xxlarge);
}

.ButtonBase-module__icon-button-neutral___CseSn {
  --qtm-colors-neutral-500: hsla(0,0%,60%,.5);
  color: var(--qtm-colors-neutral-500);
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  width: 24px;
}

.c6 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c6:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 .c3 {
  color: #424242;
  margin-right: 16px;
}

.c0 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="InfoIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
    <span>
      Sample alert
    </span>
    <button
      class="ButtonBase-module__button___-CVUK ButtonBase-module__button-medium___BtByl ButtonBase-module__button-default___K4Nmm ButtonBase-module__button-default-primary___X9GaT ButtonBase-module__shadow-2-neutral-500___mSG-z ButtonBase-module__shadow-4-primary-900___OVVjG ButtonBase-module__shadow-4-primary-700___OKpXZ ButtonBase-module__shadow-8-primary-900___cXlt5 ButtonBase-module__icon-button___nb2zK ButtonBase-module__icon-button-medium___-pGge ButtonBase-module__icon-button-neutral___CseSn c5 c6"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ButtonBase-module__button-icon___s3a-2 ButtonBase-module__button-icon-medium___HY30Y css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
